    ADDED: splitter: pre-defined 650MB and 700MB CD-R
    ADDED: more Konfigurator Tooltips    
    ADDED: usermenu: entry to open konfigurator with the useraction-page
           directly
    ADDED: import/export of keyboard shortcuts
    ADDED: mouse selection modes are back! thanks to heiner for doing the work
    ADDED: virtual VFS (try virt:/somthing/)

    FIXED: [ 1108444 ] no error message if copy or move fails
    FIXED: auto filesystems cannot be mounted
    FIXED: krusader fails to refresh at copying to the source directory on
           different name
    FIXED: color "Inactive Marked Current Foreground" was ignored (thx heiner)
    FIXED: searcher gets behind the main window, if file browse is pressed
    FIXED: [ 1120827 ] dir copy / move with F5 / F6 doesn't work 
    FIXED: [ 1064578 ] remote URL-s are saved in panel profiles
    FIXED: Creatring dir-trees on the fly (mkdir /foo/bar/test) is working again
    FIXED: Syncbrowse is working again and is deactivated automaticly if no
           longer possible
    FIXED: [ 1107141 ] view throws error at editing new files on remote fs
    FIXED: [ 1110507 ] cannot open rpm package if path contains space
    FIXED: command line alters its height at opening/closing the popup panel
    FIXED: [ 1037003 ] konqueror style drag and drop
    FIXED: [ 1076865 ] the default search text is '*'
    FIXED: [ 976598 ] krusader occasionally crashes at closing the viewer
    FIXED: [ 1033319 ] Relative paths dont get auto-completed
    FIXED: [ 971831 ] space calculation failure if the file is bigger than
           4 GByte
    FIXED: [ 1089450 ] synchronizer copies the date information for local files
    FIXED: [ 1109249 ] drag and drop doesn't work with international characters
    FIXED: viewer cannot open 600 files, when the owner column is enabled
    FIXED: ftp_vfs overloads the CPU at stepping into a slow server on the
           network
    FIXED: krusader's detection of old or incompatible versions