@@ -108,6 +108,7 @@ public slots:
 	virtual void vfs_setQuiet(bool beQuiet){ quietMode=beQuiet; }
 	virtual void vfs_enableRefresh(bool enable);        
 	virtual void vfs_disableMimeTypeMagic( bool disable ) { mimeTypeMagicDisabled = disable; }
+	virtual void vfs_invalidate() { invalidated = true; }
         
 signals: 	
 	void startUpdate(); //< emitted when the VFS starts to refresh its list of vfiles.
@@ -136,7 +137,7 @@ protected:
 	bool isWritable;            //< true if it's writable
 	bool dirty;                 //< true if a watcher signal arrived while in disabled refresh.
 	bool mimeTypeMagicDisabled; //< true if the mime type magic is disabled
-
+	bool invalidated;           //< the content of the cache is invalidated
 	
 protected slots:
 	// The slot for the KDirSize job
