@@ -40,6 +40,7 @@
     ADDED: mouse selection modes are back! thanks to heiner for doing the work
     ADDED: virtual VFS (try virt:/somthing/)
 
+    FIXED: [ 1073940 ] no refresh after the exclusion filter is modified
     FIXED: [ 1108444 ] no error message if copy or move fails
     FIXED: auto filesystems cannot be mounted
     FIXED: krusader fails to refresh at copying to the source directory on
